# phishnet

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: phishnet.yaml
models/: metrics.json  phishnet.onnx
scripts/: fetch_data.py
src/phishnet/: __init__.py  config.py  drift.py  features.py  model.py  serving.py
tests/: conftest.py  test_features.py  test_integration.py  test_model.py  test_serving.py
